# permissions

./: .env.example  .gitignore  Cargo.toml  README.md  start_db
client/frontend/: package.json
client/frontend/src/: App.tsx  CompaniesPage.tsx  CreateCompanyModal.tsx  CreatePermissonModal.tsx  CreateRoleModal.tsx  CreateUserModal.tsx  LoginPage.tsx  NavBar.tsx  Notification.tsx  PermissionsPage.tsx  RolePage.tsx  RolesPage.tsx  UsersPage.tsx  schema.ts
sql/: 001_schema.sql  002_bootstrap.sql
sql/bootstrap/: 001_permissions.sql
sql/migrate/: 001_schema.sql
src/: common.rs  companies.rs  main.rs  model.rs  permissions.rs  roles.rs  schema.rs  swagger.rs  users.rs
src/auth/: dto.rs  jwt_auth.rs  mod.rs  service.rs
